<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/scrollView"
    >

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"

        android:layout_marginTop="334dp"
        android:layout_marginEnd="4dp"
        android:columnCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/Button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:text="@string/ButtonText" />
        <Button
            android:id="@+id/toastButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:text="@string/ToastButton" />
        <Button
            android:id="@+id/editTextButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:text="@string/editTextButton" />
        <Button
            android:id="@+id/textView"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:text="@string/textView" />

        <Button
            android:id="@+id/snackBar"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:text="@string/snackBar" />
        <Button
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:text="@string/progressBar" />
        <Button
            android:id="@+id/alertButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:text="@string/alertButton" />

        <RadioGroup android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:id="@+id/radioGroup"
            >
            <RadioButton
                android:id="@+id/radioButtonOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/radioButtonOne"/>
            <RadioButton
                android:id="@+id/radioButtonTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/radioButtonTwo"/>

        </RadioGroup>
        <ImageView android:layout_margin="5dp"
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:id="@+id/imageView"
            android:src="@drawable/prototype"
            />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_margin="5dp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/checkBox"/>

        <Switch
            android:id="@+id/switchClick"
            android:layout_height="50dp"
            android:layout_width="100dp"
            android:layout_margin="5dp"
            android:text="@string/switchClick"

            />

        <Spinner
            android:id="@+id/mySpinner"
            android:layout_margin="5dp"
            android:layout_height="50dp"
            android:layout_width="100dp"/>

        <Button
            android:id="@+id/listViewButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:text="@string/listViewButton" />
        <Button
            android:id="@+id/webView"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:text="@string/webView" />



    </GridLayout>



</ScrollView>